--- a/admin/html/examList.html
+++ b/admin/html/examList.html
@@ -64,7 +64,7 @@
         table.render({
             elem: '#demo'
             , height: 312
-            , url: host()+"" //数据接口
+            , url: "localhost:8080/" //数据接口
             , page: true //开启分页
             , cols: [[ //表头
                 {type: 'checkbox', fixed: 'left'}
