--- a/admin/html/examPublish.html
+++ b/admin/html/examPublish.html
@@ -21,7 +21,14 @@
 						<div class="layui-card-header">笔试新增</div>
 
 						<div class="layui-card-body">
-						
+							<div class="layui-form-item">
+								<label class="layui-form-label">笔试者：</label>
+								<div class="layui-input-block">
+									<input type="text" name="title" lay-verify="title" autocomplete="off" placeholder="请输入文章标题" class="layui-input">
+								</div>
+							</div>
+							<!--橙色分割线-->
+							<hr class="layui-bg-orange">
 							<div class="layui-form-item">
 								<label class="layui-form-label">笔试题：</label>
 							</div>
