--- a/admin/html/PwdSet.html
+++ b/admin/html/PwdSet.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-    <legend style="text-align: center">iArchie博客</legend>
+    <legend style="text-align: center">FNST-在线笔试系统</legend>
 </fieldset>
 <form action="" method="post">
     <div style="padding: 20px; background-color: #F2F2F2;">
