--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                    <a href="admin/html/examList.html" target="iframe">笔试题管理</a>
                 </li>
                    <li class="layui-nav-item">
-                   <a href="admin/html/examList.html" target="iframe">笔试管理</a>
+                   <a href="admin/html/examManage.html" target="iframe">笔试管理</a>
                 </li>
                 <li class="layui-nav-item">
              	 <a id="logout">退出系统</a>
