--- a/admin/html/userList.html
+++ b/admin/html/userList.html
@@ -8,6 +8,11 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 		<link rel="stylesheet" href="../../layui/css/layui.css" media="all">
+<style>
+	.layui-laypage-limits{
+     display:none !important;
+}
+</style>
 	</head>
 
 	<body>
@@ -22,13 +27,14 @@
 						<form action="" method="post">
 							<div class="layui-card-body">
 								<div class="layui-form-item">
-									<div class="layui-inline">
+									<!--<div class="layui-inline">
 										<label class="layui-form-label">笔试者:</label>
 										<div class="layui-input-inline">
 											<input type="text" name="text" name="queryBut" placeholder="请输入需要查询的笔试者" lay-verify="required" autocomplete="off" class="layui-input">
 										</div>
 									</div>
 									<button class="layui-btn layui-btn-warm layui-btn-radius">点击查询</button>
+									-->
 									<div>
 										<button class="layui-btn " id="addBs"><a style="color:white" > <i class="layui-icon">&#xe608;</i>新增笔试者</a></button>
 									</div>
@@ -46,67 +52,68 @@
 		</script>
 
 		<script src="../../layui/layui.js"></script>
+		<script type="text/javascript" src="../../js/jquery.min.js" ></script>
 		<script>
+		var url="localhost:8080/getUserList?token="+localStorage.token;
+			function formatDate(now) { 
+			var year=now.getFullYear(); 
+			var month=now.getMonth()+1; 
+			var date=now.getDate(); 
+			var hour=now.getHours(); 
+			var minute=now.getMinutes(); 
+			var second=now.getSeconds(); 
+			return year+"-"+month+"-"+date+" "+hour+":"+minute+":"+second; 
+			} 
+			
 			layui.use('table', function() {
 				var table = layui.table;
 				//第一个实例
 				table.render({
-					elem: '#demo',
-					height: 312,
-					//url: "localhost:8080/" //数据接口
-					url:"../data/sort.json"	,
-					page: true //开启分页
-						,
-					cols: [
-						[ //表头
-							{
-								field: 'id',
-								title: '用户ID'
-							}, {
-								field: 'username',
-								title: '笔试者姓名'
-							}, {
-								field: 'start_time',
-								title: '笔试开始时间'
-							}, {
-								field: 'end_time',
-								title: '笔试结束时间'
-							},
-							{
-								field: 'bszt',
-								title: '笔试状态',
-								templet: function(d) {
-								if(d.start_time==null)
-									return"筆試未開始";
-								else if(d.start_time!=null&&d.end_time==null)
-									return"筆試未開始";
-								else if(d.start_time!=null&&d.end_time!=null)
-									return"筆試未開始";
+					 	elem: '#demo',
+						height: 500,
+//					    url: "../data/sort.json",
+						url:'http://localhost:8080/getUserList?token='+localStorage.token,
+						page: true,
+						limit:5,
+						limits:[5,10,15,20,25,30],
+						cols: [ 
+					 		[ //表头
+								{
+									field: 'id',
+									title: '用户ID'
+								}, {
+									field: 'username',
+									title: '笔试者姓名'
+								},
+								{
+									field: '',
+									title: '创建时间',
+									templet: function(d) {
+									 var d=new Date(d.createTime);
+									 return formatDate(d);
+									}
 								}
-//return d.start_time;
-//								}
-							}, {
-								fixed: 'right',
-								title: '&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;操作',
-								toolbar: '#barDemo'
 
-							}
 						]
 					]
 				});
 
-				//监听行工具事件
-				table.on('tool(test)', function(obj) {
-					var data = obj.data;
-					//console.log(obj)
-					if(obj.event === 'del') {
-						layer.confirm('真的删除数据吗', function(index) {
-							obj.del();
-							layer.close(index);
-						});
-					}
-				});
+			//监听行工具事件
+			table.on('tool(test)', function(obj) {
+				var data = obj.data;
+				//console.log(obj)
+				if(obj.event === 'del') {
+					layer.confirm('真的删除数据吗', function(index) {
+						obj.del();
+						layer.close(index);
+					});
+				}
 			});
+			});
+			
+			$("#addBs").click(function(){
+				window.open("userAdd.html","iframe")
+			})
 		</script>
 	</body>
 
