--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li class="layui-nav-item"><a href="https://www.fujitsu.com/cn/group/fnst/" >公司主页</a></li>
             <li class="layui-nav-item"><a href="admin/html/adminMsg.html" target="iframe">个人信息</a></li>
         </ul>
-        <ul class="layui-nav layui-layout-right">
+        <!--<ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
                 <a href="javascript:;">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
@@ -26,7 +26,7 @@
                 </dl>
             </li>
             <li class="layui-nav-item"><a href="">退出</a></li>
-        </ul>
+        </ul>-->
     </div>
 
     <div class="layui-side layui-bg-black">
