--- a/admin/html/userList.html
+++ b/admin/html/userList.html
@@ -52,9 +52,10 @@
 		</script>
 
 		<script src="../../layui/layui.js"></script>
+		<script src="../js/common.js"></script>
 		<script type="text/javascript" src="../../js/jquery.min.js" ></script>
 		<script>
-		var url="localhost:8080/getUserList?token="+localStorage.token;
+		var url=host()+"getUserList?token="+localStorage.token;
 			function formatDate(now) { 
 			var year=now.getFullYear(); 
 			var month=now.getMonth()+1; 
@@ -72,7 +73,7 @@
 					 	elem: '#demo',
 						height: 500,
 //					    url: "../data/sort.json",
-						url:'http://localhost:8080/getUserList?token='+localStorage.token,
+						url:host()+'/getUserList?token='+localStorage.token,
 						page: true,
 						limit:5,
 						limits:[5,10,15,20,25,30],
